--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TestApplication</string>
+
+    <string name="something_went_wrong">Something went wrong</string>
 </resources>
